--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai-survival-sim",
   "version": "0.1.0",
+  "homepage": "https://theqoqqi.github.io/ai-survival-sim",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "gh-pages": "^6.3.0",
     "openai": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
